--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0",
-        "ext-curl": ""
+        "php": ">=5.3.0"
     },
     "autoload": {
         "psr-0": {
